--- a/IsaProject/Views/Appointments/AddTags.cshtml
+++ b/IsaProject/Views/Appointments/AddTags.cshtml
@@ -7,7 +7,7 @@
 <h1>Add tags</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-controller="Tags" asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
