--- a/IsaProject/Views/FastReservations/GetFree.cshtml
+++ b/IsaProject/Views/FastReservations/GetFree.cshtml
@@ -1,7 +1,7 @@
-﻿@model IEnumerable<IsaProject.Models.Entities.Appointment>
+﻿@model IEnumerable<IsaProject.Models.Entities.FastReservation>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "GetFree";
 }
 
 <h1>Index</h1>
@@ -12,6 +12,9 @@
 <table class="table">
     <thead>
         <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.NewPrice)
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.OwnerID)
             </th>
@@ -33,15 +36,15 @@
             <th>
                 @Html.DisplayNameFor(model => model.isScheduled)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IsActive)
-            </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.NewPrice)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.OwnerID)
             </td>
@@ -64,24 +67,9 @@
                 @Html.DisplayFor(modelItem => item.isScheduled)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.IsActive)
+                <a asp-action="TakeAppointment" asp-route-id="@item.Id">Schedule</a>
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                <a asp-action="AddTags" asp-route-id="@item.Id">Add Tags</a>
-            </td>
-
-
-
-
-
-
-
-
         </tr>
 }
     </tbody>
 </table>
-
