--- a/IsaProject/Views/Appointments/AddTagsUser.cshtml
+++ b/IsaProject/Views/Appointments/AddTagsUser.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "AddTagsUser";
 }
 
-<h1>Add tags</h1>
+<h1>Add tags user</h1>
 
 <table class="table">
     <thead>
@@ -30,7 +30,7 @@
 }
     </tbody>
    
-<button type="Schedule" onclick="Schedule()">Submit</button>
+<button type="Schedule" onclick="schedule()">Submit</button>
 
 </table>
 <script>
@@ -51,7 +51,7 @@
 
     }
 
-    function Schedule() {
+    function schedule() {
         var id = id;
         var url = window.location.pathname;
         var id = url.substring(url.lastIndexOf('/') + 1);
