--- a/IsaProject/Views/Shared/_Layout.cshtml
+++ b/IsaProject/Views/Shared/_Layout.cshtml
@@ -99,7 +99,7 @@
                             </div>
                             </li>
                             <li>
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Subscriptions" asp-action="GetMySubscriptions">My Subscriptions</a>
+                                <a class="nav-link text-light" asp-area="" asp-controller="Subscriptions" asp-action="GetMySubscriptions">My Subscriptions</a>
                             </li>
                         }
 
